Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16606

lnet_parse_route broken by LU-6142 lnet: use list_first_entry() in lnet/lnet subdirectory.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Regression in

      commit 3b760208109b249fd9051d97dbc98664ca4b5769
      Author: Mr NeilBrown <neilb@suse.de>
      Date:   Mon May 30 20:43:12 2022 -0400
      
          LU-6142 lnet: use list_first_entry() in lnet/lnet subdirectory.
      
          Convert
            list_entry(foo->next .....)
          to
            list_first_entry(foo, ....)
      
          in 'lnet/lnet'
      
          In several cases the call is combined with
          a list_empty() test and list_first_entry_or_null() is used
      
          Test-Parameters: trivial testlist=sanity-lnet
          Change-Id: I45e1bdfe41854c88af98ebf24797f72a68b11dc3
          Signed-off-by: Mr NeilBrown <neilb@suse.de>
          Reviewed-on: https://review.whamcloud.com/47488
          Tested-by: jenkins <devops@whamcloud.com>
          Tested-by: Maloo <maloo@whamcloud.com>
          Reviewed-by: Chris Horn <chris.horn@hpe.com>
          Reviewed-by: Oleg Drokin <green@whamcloud.com>
      

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: